fix(top_bar, accents): adjust height of top bar for new logo, fix the jump to top button on hiring pages

--- a/sass/directives/00_variables/_top_bar.scss
+++ b/sass/directives/00_variables/_top_bar.scss
@@ -1,10 +1,12 @@
 // Top Bar
 $top-bar--max-width: 1430px;
 $top-bar--padding: 12px;
-$top-bar--height--mobile: 55px;
-$top-bar--logo-width: 232px;
-$top-bar--logo-height: 45px;
-$top-bar--subnav-offset: 66px;
+$top-bar--height--mobile: 70px;
+//232px old
+$top-bar--logo-width: 295px;
+//45px old
+$top-bar--logo-height: 68px;
+$top-bar--subnav-offset: 90px;
 $top-bar--body-offset: 50px;
 
 // These affect positioning of the hero, subnav, buy box, search modal
