--- a/sass/directives/02_base_components/accents/_accents.scss
+++ b/sass/directives/02_base_components/accents/_accents.scss
@@ -71,8 +71,8 @@ $return-to-top-z-index: 9001 !default;
     color: white;
     margin: 0;
     position: relative;
-    left: 30%;
-    top: 10%;
+    left: 34%;
+    top: 22%;
     font-size: $back-to-top-icon-size;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
